# Algorithms-2-sem

./: .gitignore  BigInteger.cpp  BigInteger.h  CMakeLists.txt  PackedBitMatrix.cpp  PackedBitMatrix.h  Rational.cpp  Rational.h  Task_1_a.cpp  Task_1_b.cpp  Task_1_c.cpp  Task_1_d.cpp  Task_2_A.cpp  Task_2_B.cpp  Task_2_C.cpp  Task_2_D.cpp  Task_2_E.cpp  Task_3_A.cpp  Task_3_B.cpp  Task_3_C.cpp  Task_3_D.cpp  Task_3_E.cpp  Task_3_F.cpp  Task_4_A.cpp  Task_4_B.cpp  Task_4_C.cpp  geometry.cpp  geometry.h  list.h  main.cpp  runBigInts.cpp  test_bigints.py
BigInteger/: BigInteger.cpp  BigInteger_test.cpp  CMakeLists.txt  Rational.cpp  mainTests.cpp  runBigInts.cpp  runBigIntsIO.cpp  runRationals.cpp  test_bigints.py  test_rationals.py
GraphExtra/: CMakeLists.txt  EdgeSubGraph.cpp  EdgeSubGraph.h  Graph.h  GraphExtra.cpp  GraphTraversal.cpp  GraphTraversal.h  ListGraph.cpp  ListGraph.h  MatrixGraph.cpp  MatrixGraph.h  SetGraph.cpp  SetGraph.h  SetSubGraph.cpp  SetSubGraph.h
Scripts/: cpp_header_processor.py
